make-a-wish-salesforce/src/objects/Chapter_Action_Track__c.object
<CustomObject>
    <description>It holds list of tasks for child wishes</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <description>it holds case team role to which the task should assigned</description>
        <label>Assigned To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volunteer Manager</fullName>
                </value>
                <value>
                    <fullName>Wish Coordinator</fullName>
                </value>
                <value>
                    <fullName>Wish Granter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type_Stage__c</fullName>
        <description>It holds the wish type which it is belongs to.</description>
        <label>Case Type/Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wish Determination</fullName>
                </value>
                <value>
                    <fullName>Wish Planning &amp; Anticipation</fullName>
                </value>
                <value>
                    <fullName>Wish Assist</fullName>
                </value>
                <value>
                    <fullName>Wish Grant</fullName>
                </value>
                <value>
                    <fullName>Wish Effect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>It holds the Chapter Name</description>
        <label>Chapter Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Chapter Action Tracks</relationshipLabel>
        <relationshipName>Chapter_Action_Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Used to hold the description of task for the volunteer</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>it describes the Due date for Tasks</description>
        <label>Due Date</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Days__c</fullName>
        <description>it describes the Due date for Tasks</description>
        <label>Due Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months__c</fullName>
        <label>Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Frequency__c</fullName>
        <description>It will display the recurring frequency value.</description>
        <label>Recurring Frequency</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It determines whether the action is recurring or not</description>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>It holds the value for Sorting Order</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <description>It contains name of the task</description>
        <label>Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weeks__c</fullName>
        <label>Weeks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wish_type__c</fullName>
        <description>it holds the details of types of wish</description>
        <label>Wish type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disney World</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Shopping Spree-Local</fullName>
                </value>
                <value>
                    <fullName>Travel-International</fullName>
                </value>
                <value>
                    <fullName>Cruise-Celebrity/Royal</fullName>
                </value>
                <value>
                    <fullName>Cruise-Disney</fullName>
                </value>
                <value>
                    <fullName>Cruise-Other</fullName>
                </value>
                <value>
                    <fullName>Travel-Hawai</fullName>
                </value>
                <value>
                    <fullName>Travel-Other</fullName>
                </value>
                <value>
                    <fullName>Shopping Spree-Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Chapter Action Track</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Chapter_Name__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Wish_type__c</columns>
        <columns>Months__c</columns>
        <columns>Weeks__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DisneyWorld_Action_Track</fullName>
        <columns>NAME</columns>
        <columns>Chapter_Name__c</columns>
        <columns>Wish_type__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Chapter_Name__c</field>
            <operation>equals</operation>
            <value>Make-A-Wish Arizona</value>
        </filters>
        <filters>
            <field>Wish_type__c</field>
            <operation>equals</operation>
            <value>Disney World</value>
        </filters>
        <label>DisneyWorld Action Track</label>
    </listViews>
    <listViews>
        <fullName>Wish_Determination</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Due_Days__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Chapter_Action_Track__c.Wish_Determination</value>
        </filters>
        <label>Wish Determination</label>
    </listViews>
    <listViews>
        <fullName>Wish_Panning</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Chapter_Name__c</columns>
        <columns>Wish_type__c</columns>
        <columns>Months__c</columns>
        <columns>Weeks__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Chapter_Action_Track__c.Wish_Planning</value>
        </filters>
        <label>Wish Panning</label>
    </listViews>
    <nameField>
        <displayFormat>CAT-{0000}</displayFormat>
        <label>Task Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chapter Action Tracks</pluralLabel>
    <recordTypes>
        <fullName>Wish_Determination</fullName>
        <active>true</active>
        <description>Used to hold the task of wish determination case</description>
        <label>Wish Determination</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wish_Granting</fullName>
        <active>true</active>
        <description>It holds wish granting tasks</description>
        <label>Wish Granting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wish_Planning</fullName>
        <active>true</active>
        <description>Used to hold the task of wish planning case</description>
        <label>Wish Planning</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>